welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:13: error: integer number too large
12233444555666777788889999 
^